--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,14 @@
-.App {
+*, :after, :before {
+    box-sizing: border-box;
+}
+
+body {
+    color: #4b4e55;
+}
+
+.header {
+	background: rgba(255,255,255,.85);
+  box-shadow: 0 3px 5px 0 rgba(0,0,0,.27);
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 0.5em 2em;
 }
