Add Date component and styles. Add dummy data to components

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,11 @@ body {
   text-align: center;
   padding: 0.5em 2em;
 }
+
+
+/* Date component styles */
+.date {
+  text-align: center;
+  font-weight: lighter;
+  padding: 0.5em 1em;
+}
