--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,9 @@ figcaption {
 }
 
 .explanation {
-  padding: 0.5em;
-  font-size: 1.2em;
+  padding: 1.5em;
+  font-size: 0.99em;
+  line-height: 1.7em;
 }
 
 .footer {
