Create Loading component to show loading status

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,17 @@ body {
 }
 
 
+input#date {
+  padding: 0.5em;
+  border-radius: 10px;
+  display: inline-block;
+  position: absolute;
+  right: 4em;
+  top: 50%;
+  transform: translate(0, -50%);
+  background: #f4f4ff;
+}
+
 /* Date component styles */
 .date {
   text-align: center;
@@ -58,6 +69,7 @@ figcaption {
   line-height: 1.7em;
 }
 
+/* Footer component styles */
 .footer {
   width: 70%;
   text-align: center;
@@ -67,13 +79,28 @@ figcaption {
   border-top: 1px solid rgba(55, 55, 55, .3);
 }
 
-input#date {
-  padding: 0.5em;
-  border-radius: 10px;
-  display: inline-block;
+
+/* Loading Module */
+.modal {
   position: absolute;
-  right: 4em;
-  top: 50%;
-  transform: translate(0, -50%);
-  background: #f4f4ff;
+  top: 0;
+  left: 0;
+  background: rgb(255, 255, 255, 0.65);
+  width: 100%;
+  height: 100%;
+  z-index: 3;
 }
+
+.modal p {
+  font-weight: lighter;
+  font-size: 1.8em;
+  color: #111;
+  letter-spacing: 0.1em;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-wrap: none;
+}
+
